--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link type="text/css" rel="stylesheet" href="style.css" />
+        <link type="text/css" rel="stylesheet" href="./styles/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>teste loja</title>
     </head>
