--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
         <link type="text/css" rel="stylesheet" href="./styles/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Óculos e Boina</title>
+        <script src="https://kit.fontawesome.com/a11523da75.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        
+        <div class="header">
+            <div class="contato">
+                <p>Sobre</p>
+                <p>Contato</p>
+            </div>
+            <div class="search">
+                <img class="logo">
+                <div class="search_box">
+                    <input type="seach" class="search_input" name="search" placeholder="Busca">
+                    <i class="fa-solid fa-search"></i>
+                </div>
+                <button class="conta"><i class="fa-solid fa-user"></i>Minha Conta</button>
+                <button><i class="fa-solid fa-cart-shopping"></i><p id="itens-in-cart">0</p></button>
+            </div>
+        </div>
+        <div class="navbar">
+
+        </div>
     </body>
 </html>
